Add PowerDNS DNS management
